# home-assistant-daikin-infrared

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/daikin_infrared/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  protocol.py  rate_limit.py  strings.json
docs/superpowers/plans/: 2026-06-13-daikin-infrared.md
docs/superpowers/specs/: 2026-06-13-daikin-infrared-design.md
tests/: test_broadlink_learn.py  test_broadlink_send.py  test_decode_broadlink_capture.py  test_protocol.py  test_rate_limit.py
tools/: broadlink_learn.py  broadlink_send.py  decode_broadlink_capture.py
